--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "personal-site",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "11.10.0",
+    "npm": "6.7.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "Express": "^3.0.1",
     "bootstrap": "^4.4.1",
+    "express": "^4.17.1",
     "node-sass": "^4.14.0",
     "nodemon": "^2.0.3",
     "react": "^16.13.1",
