--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": "^12.0.0",
     "npm": "6.7.0"
   },
+  "main": "./src/index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
