--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "typing": "^0.1.9"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
