--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-typing-animation": "^1.6.2",
     "react-typist": "^2.0.5",
     "reactstrap": "^8.4.1",
+    "serve": "^11.3.0",
     "typing": "^0.1.9"
   },
   "scripts": {
